<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark1"
    android:gravity="center"
    android:orientation="vertical"
    android:theme="@style/AppTheme">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/title_info"
        android:textAlignment="center"
        android:textColor="@color/textColorLight"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/textColorDark" />

        <TextView
            android:id="@+id/info_email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/textColorDark" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/info_text_name"
            android:textColor="@color/textColorDark" />

        <EditText
            android:id="@+id/info_et_name"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/textColorDark" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/info_text_gender"
            android:textColor="@color/textColorDark" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/info_rbtn_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"

                android:text="Nam"
                android:textColor="@color/textColorDark" />

            <RadioButton

                android:id="@+id/info_rbtn_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="Nu"
                android:textColor="@color/textColorDark" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/info_text_age"
            android:textColor="@color/textColorDark" />

        <EditText

            android:id="@+id/info_et_age"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:inputType="numberDecimal"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/textColorDark" />
    </LinearLayout>

    <Button
        android:id="@+id/info_btn_accept"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/gradient_button_light"
        android:text="@string/info_accept"
        android:textColor="@color/textColorLight" />

    <Button
        android:id="@+id/info_btn_deny"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/gradient_button_gray"
        android:text="@string/info_deny"
        android:textColor="@color/textColorLight" />
</LinearLayout>