<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorDarkBackground"
    tools:context="Activities.LoginActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:text="@string/title_login"
            android:textAlignment="center"
            android:textColor="@color/textColorLight"
            android:textSize="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/textColorDark" />

            <EditText
                android:id="@+id/login_et_username"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:maxLines="1"
                android:textColor="@color/textColorDark"
                android:lines="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/textColorDark" />

            <EditText
                android:id="@+id/login_et_password"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/textColorDark"
                android:lines="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/login_btn_login"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/gradient_button_light"
                android:text="@string/login_button"
                android:textColor="@color/textColorLight" />

            <Button
                android:id="@+id/login_btn_register"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/gradient_button_gray"
                android:text="@string/register_button"
                android:textColor="@color/textColorLight" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>